2014-12-15  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add setfacl -k option.
	* utils.xml (setfacl): Ditto.

2014-12-10  Michael DePaulo  <mikedep333@gmail.com>

	* ntsec.xml (ntsec-mapping-samba): Clarify Samba file server setup.

2014-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.bloda): Add Lenovo RapidBoot Shield to
	BLODA list.

2014-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.upgrade-mountpoints): Remove.
	* pathnames.xml (pathnames-mount-ex): Remove note about 1.5->1.7
	registry mount point updates.

2014-12-06  Corinna Vinschen  <corinna@vinschen.de>

2014-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-solaris): Point to libtirpc for xdr functions.

2014-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.xsl (toc.section.depth): Set to 4.
	* ntsec.xml: Revamp account mapping documentation to account for the
	new db_home, db_shell, db_gecos settings.

2014-12-05  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* new-features.xml (ov-new1.7.34): Document qsort_r and __bsd_qsort_r.
	* posix.xml (std-bsd): Add qsort_r.
	(std-gnu): Ditto.
	(std-notes): Add section for qsort_r.

2014-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add latest changes.

2014-11-28  Yaakov Selkowitz  <yselkowi@redhat.com>

	* Makefile.in (XSLTPROC): Remove.
	(cygwin-ug-net/cygwin-ug-net.pdf): Build with xmlto pdf.
	(cygwin-api/cygwin-api.pdf): Ditto.
	(faq/faq.html): Fix extraneous anchor removal.

2014-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (passwd): Align to latest changes.

2014-11-13  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add new section.
	(ov-new1.7.33): Reflect intermediate 1.7.33 release.

2014-11-07  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (mkgroup): Align to changed usage.
	(mkpasswd): Ditto.

2014-11-07  Corinna Vinschen  <corinna@vinschen.de>
