@@ -1,3 +1,11 @@
+2014-12-18  Yaakov Selkowitz  <yselkowitz@cygwin.com>
+
+	* new-features.xml (ov-new1.7.34): Document Solaris stdio_ext.h
+	functions and BSD/GNU unlocked stdio extensions.
+	* posix.xml (std-bsd): Add BSD unlocked stdio extensions.
+	(std-gnu): Add GNU unlocked stdio extensions.
+	(std-solaris): Add stdio_ext.h functions.
+
 2014-12-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.34): Add setfacl -k option.
